Added Disconnect logic also

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 TELEGRAM_BOT_TOKEN=your_bot_token_here
 TELEGRAM_CHAT_ID=your_chat_id_here
+TELEGRAM_LOG_CHANNEL_ID=your_log_channel_id_here otherwise it will send log in db channel i.e. TELEGRAM_CHAT_ID
+
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
 # Cloud Database (Upstash Redis)
